--- a/src/Stylesheets/LeadForm.css
+++ b/src/Stylesheets/LeadForm.css
@@ -272,6 +272,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   padding: 8px 0;
 }
 
@@ -280,6 +281,7 @@
   font-size: 20px;
   font-family: 'Oswald', sans-serif;
   margin: 0 0 10px;
+  text-align: left;
 }
 
 .lf-steps-list {
